--- a/app/scss/_animation.scss
+++ b/app/scss/_animation.scss
@@ -1,6 +1,6 @@
 @keyframes anima {
     0% {
-        min-width: 403px;
+        min-width: 400px;
     }
     50% {
         min-width: 200px;
@@ -67,5 +67,20 @@
     100% {
         opacity: 1;
         left: 0;
+    }
+}
+
+@keyframes anima4 {
+    0% {
+        left: 0px;
+        min-width: -0px;
+    }
+    50% {
+        left: -200px;
+        min-width: -200px;
+    }
+    100% {
+        left: -400px;
+        min-width: -400px;
     }
 }
