--- a/app/scss/_animation.scss
+++ b/app/scss/_animation.scss
@@ -84,3 +84,84 @@
         min-width: -400px;
     }
 }
+
+@keyframes anima-phone {
+    0% {
+        min-width: 335px;
+    }
+    50% {
+        min-width: 167px;
+    }
+    100% {
+        min-width: 0px;
+    }
+}
+/*
+@keyframes anima-phone {
+    0% {
+        height: 255px;
+    }
+    50% {
+        height: 120px;
+    }
+    100% {
+        height: 0;
+    }
+}*/
+
+@keyframes anima-phone-item-slider {
+    0% {
+        width: 172.5px;
+    }
+    50% {
+        width: 262px;
+    }
+    100% {
+        width: 350px;
+    }
+}
+
+@keyframes anima-phone-item-slider1 {
+    0% {
+        min-width: 172.5px;
+    }
+    50% {
+        min-width: 262px;
+    }
+    100% {
+        min-width: 335px;
+    }
+}    
+
+@keyframes anima1-phone {
+    0% {
+        opacity: 0;
+        left: -190px;
+        width: 140px;
+    }
+    20% {
+        opacity: 0;
+        left: -140px;
+        width: 180px;
+    }
+    40%{
+        opacity: 0;
+        left: -90px;
+        width: 205px;
+    }
+    60% {
+        opacity: 0;
+        left: -30px;
+        width: 235px;
+    }
+    80% {
+        opacity: 0.5;
+        left: 0px;
+        width: 265px;
+    }
+    100% {
+        opacity: 1;
+        left: 0;
+        width: 275px;
+    }
+}
