--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -29,16 +29,12 @@
         display: none;
     }
     .swiper-slide:hover .swiper-slide__descr{
-        min-width: 395px;
-
+        display: none;
     }
-    /*.swiper-slide.mobile{
-        position: absolute;
-        left: 0;
-        top: -5px;
-        z-index: 10;
-    }*/
-    
+    .swiper-slide.swiper-slide--mobile-active .swiper-slide__descr{
+        display: block;
+        min-width: 395px;
+    }    
 }
 
 @media (max-width: 767px){
@@ -61,7 +57,13 @@
         display: none;
     }
     .menu__list-item.show {
-        display: inline-block;
+        background-color: transparent;
+        position: relative;
+        &::before{
+            content: url('../images/Union.svg');
+            position: absolute;
+            left: -12px;
+        }
     }
     .menu__list-item.phone-show{
         display: block;
@@ -73,34 +75,24 @@
         border: none;
         border-radius: 8px;
         font-weight: 500;
-        &.show{
-            background-color: #80A0F2;
-        }
     }
     .menu__phone-arrow{
         display: block;
-        //float: right;
-        //margin-top: -25px;
-        //margin-bottom: 5px;
         position: absolute;
         right: 5px;
         top: 5px;
+        &.show{
+            transform: rotate(180deg);
+        }
     }
-    /*.menu__phone-arrow.hidd{
-        display: none;
-        
-    }*/
+    
     .menu__list.show .menu__phone-arrow-active{
         transform: rotate(180deg);
         position: absolute;
         z-index: 11;
         right: 10px;
         top: 5px;
-        /*margin-right: 10px;*/
         display: block;
-        /*float: right;
-        margin-top: 10px;
-        margin-bottom: 5px;*/
     }
 
     .menu__list{
@@ -108,15 +100,16 @@
         left: 15px;
         right: 15px;
         height: 250px;
-        background-color: #A5BEFF;
-        border-radius: 8px;
+        background-color: #254595;
+        border-radius: 0 0 8px 8px;
         z-index: 10;
         top: -100%;
         transition: all 1s;
+        padding-left: 25px;
     }
 
     .menu__list.show{
-        top: 50px;
+        top: 100px;
     }
     .slider-wrap {
         margin: 55px 0 0 0;
@@ -127,11 +120,34 @@
     }
     .swiper-slide{
         height: 235px;
-        &__img{
-            min-width: 150px;
-            height: 235px;
-        }
+    }
 
+    .swiper-slide__img{
+        min-width: 155px;
+        height: 235px;
+    }
+    //test
+    .swiper-slide.swiper-slide--mobile-active{
+        width: 350px !important;
+        //animation: anima-phone-item-slider 1s linear normal;
+    }
+    .swiper-slide.swiper-slide--mobile-active .swiper-slide__img {
+        min-width: 335px;
+        height: 235px;
+        border-radius: 8px 8px 0 0;
+        animation: anima-phone-item-slider1 1s linear normal;
+    }
+    .swiper-slide.swiper-slide--mobile-active .swiper-slide__descr {
+        left: 0px;
+        top: 235px;
+        min-width: 335px;
+        height: 255px;
+        animation: anima-phone 1s linear reverse;
+        border-radius: 0 0 8px 8px;
+    }
+    .swiper-slide.swiper-slide--mobile-active .swiper-slide__text {
+        width: 275px;
+        animation: anima1-phone 1s linear normal;
     }
     .swiper-container-horizontal>.swiper-pagination-bullets {
         width: 93%;
