--- a/app/scss/_animation.scss
+++ b/app/scss/_animation.scss
@@ -165,3 +165,42 @@
         width: 275px;
     }
 }
+
+@keyframes anima4-phone {
+    0% {
+        left: 0px;
+        min-width: 0px;
+    }
+    50% {
+        left: -197px;
+        min-width: -197px;
+    }
+    100% {
+        left: -395px;
+        min-width: -395px;
+    }
+}
+
+@keyframes anima-opacity {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes anima-tablet {
+    0% {
+        min-width: 395px;
+    }
+    50% {
+        min-width: 200px;
+    }
+    100% {
+        min-width: 0px;
+    }
+}
